# i2c-binding-rs

./: Cargo.toml  README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binding-i2c.json  binding-test.sh  build.rs
afb-binding/src/: binding.rs  verbs.rs
i2c-lib/: Cargo.toml
i2c-lib/capi/: build.rs  capi-map.h  capi-mod.rs
i2c-lib/src/: i2c-bus.rs  i2c-read.rs  libso.rs
